Updated img file path

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 	<h2 class="text-center mb-5">Latest News</h2>
 	<div class="container-fluid d-flex flex-wrap justify-content-center p-0">
 		<div class="card bg-dark mb-4 me-3">
-			<img src="images/blog/1.jpg" class="card-img-top mb-2" alt="...">
+			<img src="images/Blog/1.jpg" class="card-img-top mb-2" alt="...">
 			<div class="card-body">
 				<h6 class="card-title lh-base">we're off to the races</h6>
 				<p class="card-text mb-4">Some quick example text to build on the card title and make up the...</p>
@@ -187,7 +187,7 @@
 			</div>
 		</div>
 		<div class="card bg-dark mb-4 me-3">
-			<img src="images/blog/2.jpg" class="card-img-top mb-2" alt="...">
+			<img src="images/Blog/2.jpg" class="card-img-top mb-2" alt="...">
 			<div class="card-body">
 				<h6 class="card-title lh-base">we're off to the races</h6>
 				<p class="card-text mb-4">Some quick example text to build on the card title and make up the...</p>
@@ -195,7 +195,7 @@
 			</div>
 		</div>
 		<div class="card bg-dark mb-4 me-3">
-			<img src="images/blog/3.jpg" class="card-img-top mb-2" alt="...">
+			<img src="images/Blog/3.jpg" class="card-img-top mb-2" alt="...">
 			<div class="card-body">
 				<h6 class="card-title lh-base">we're off to the races</h6>
 				<p class="card-text mb-4">Some quick example text to build on the card title and make up the...</p>
@@ -203,7 +203,7 @@
 			</div>
 		</div>
 		<div class="card bg-dark mb-4 me-3">
-			<img src="images/blog/4.jpg" class="card-img-top mb-2" alt="...">
+			<img src="images/Blog/4.jpg" class="card-img-top mb-2" alt="...">
 			<div class="card-body">
 				<h6 class="card-title lh-base">we're off to the races</h6>
 				<p class="card-text mb-4">Some quick example text to build on the card title and make up the...</p>
@@ -211,7 +211,7 @@
 			</div>
 		</div>
 		<div class="card bg-dark mb-4 me-3">
-			<img src="images/blog/5.jpg" class="card-img-top mb-2" alt="...">
+			<img src="images/Blog/5.jpg" class="card-img-top mb-2" alt="...">
 			<div class="card-body">
 				<h6 class="card-title lh-base">we're off to the races</h6>
 				<p class="card-text mb-4">Some quick example text to build on the card title and make up the...</p>
