--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat.</p>
-				<button class="btn btn-lg btn-outline-primary">Book Now</button>
 			</div>
 			<div class="col">
 				<img src="images/split_section/3.jpg" class="img-fluid rounded primary-color-border mb-5">
@@ -215,6 +214,7 @@
 			<div class="card-body">
 				<h6 class="card-title lh-base">we're off to the races</h6>
 				<p class="card-text mb-4">Some quick example text to build on the card title and make up the...</p>
+				<a href="#" class="btn btn-sm btn-outline-primary">Read More</a>
 			</div>
 		</div>
 	</div>
