--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 		<!-- Hero Section -->
 		<header class="d-flex flex-column justify-content-center align-items-center h-100 text-center mb-5">
 			<h1 class="display-3 text-white text-capitalize lh-base" style="max-width: 25ch">intense games. epic food. sweet victory.</h1>
-			<p class="text-white mt-3" style="max-width: 40ch;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p class="text-white mt-3 mb-4" style="max-width: 40ch;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-			<div class="mt-4">
-				<button class="btn btn-primary btn-lg mx-3 primary-color-background primaryy-color-border">Book Now</button>
+			<div>
+				<button class="btn btn-primary btn-lg mx-3 mb-3 mb-xs-0 mb-sm-0 mb-md-0 primary-color-background primaryy-color-border">Book Now</button>
 				<button class="btn btn-outline-primary btn-lg primary-color-border">Find Out More</button>
 			</div>
 		</header>
@@ -153,7 +153,7 @@
 		</div>
 	</section>
 	<div class="container-fluid p-5 mb-5">
-		<h2 class="text-center mb-5">people love vexam</h2>
+		<h2 class="text-center mb-5 lh-base">people love vexam</h2>
 		<div class="container-fluid d-flex flex-wrap justify-content-center">
 			<div class="testimonial-card">
 				<img src="images/avatars/face1.jpg" class="rounded avatar-image primary-color-border mb-4">
