--- a/index.html
+++ b/index.html
@@ -173,7 +173,16 @@
 		</div>
 	</div>
 </section>
-
+<section class="container-fluid bg-dark d-flex flex-column align-items-center p-5 mt-5 mb-5">
+	<h2 class="text-center mb-3 lh-base">Subscribe to our newsletter</h2>
+	<p class="text-center mb-5" style="max-width: 40ch;">Subscribe today for updates on our latest offerings. Events, new games and chances to win some kickass loot!</p>
+	<form>
+		<div class="input-group mb-3 form-outline form-white">
+			<input type="email" class="form-control" placeholder="Recipient's email" aria-label="Recipient's email" aria-describedby="button-addon2">
+			<button class="btn btn-outline-primary" type="button" id="button-addon2">Subscribe</button>
+		</div>
+	</form>
+</section>
 <section class="container-fluid p-4 mb-5">
 	<h2 class="text-center mb-5">Latest News</h2>
 	<div class="container-fluid d-flex flex-wrap justify-content-center p-0">
@@ -220,14 +229,9 @@
 	</div>
 </section>
 <section class="container-fluid bg-dark d-flex flex-column align-items-center p-5 mt-5 mb-5">
-	<h2 class="text-center mb-3 lh-base">Subscribe to our newsletter</h2>
-	<p class="text-center mb-5" style="max-width: 40ch;">Subscribe today for updates on our latest offerings. Events, new games and chances to win some kickass loot!</p>
-	<form>
-		<div class="input-group bg-dark mb-3">
-			<input type="email" class="form-control bg-dark" placeholder="Recipient's email" aria-label="Recipient's email" aria-describedby="button-addon2">
-			<button class="btn btn-outline-primary" type="button" id="button-addon2">Subscribe</button>
-		</div>
-	</form>
+	<h2 class="text-center mb-3 lh-base">Delectable savings off your first visit!</h2>
+	<p class="text-center mb-4" style="max-width: 40ch;">20% off your first visit or 40% with a group of 6 or more!</p>
+	<button class="btn btn-primary btn-lg">Book Now</button>
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
