Added comments to HTML

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<!-- End -->
 </head>
 <body>
+	<!-- Hero Section -->
 	<section id="hero">
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded p-3">
@@ -56,9 +57,9 @@
 				</div>
 			</div>
 		</nav>
-		<!-- End -->
+		<!-- Navbar -->
 
-		<!-- Hero Section -->
+
 		<header class="d-flex flex-column justify-content-center align-items-center h-100 text-center mb-5">
 			<h1 class="display-3 text-white text-capitalize lh-base" style="max-width: 25ch">intense games. epic food. sweet victory.</h1>
 			<p class="text-white mt-3 mb-4" style="max-width: 40ch;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -68,8 +69,10 @@
 				<button class="btn btn-outline-primary btn-lg primary-color-border">Find Out More</button>
 			</div>
 		</header>
-		<!-- End -->
 	</section>
+	<!-- Hero Section -->
+
+	<!-- Top Games Section -->
 	<section class="container-fluid p-5 mb-5">
 		<h2 class="mb-5 mt-5 text-center">Our TOP Games</h2>
 
@@ -112,15 +115,18 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-		<!-- End -->
+		<!-- Carousel -->
 	</section>
+	<!-- Top Games Section -->
+
+	<!-- Split Section -->
 	<section class="container justify-content-center mb-5">
 		<div class="row mb-5">
 			<div class="col col-12 col-sm-12 col-lg-6 col-xl-6">
 				<h3 class="lh-base mb-3">A plethora of games to play, both modern and classic!</h3>
 				<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat.</p>
 			</div>
 			<div class="col">
@@ -134,8 +140,8 @@
 			<div class="col col-12 col-sm-12 col-lg-6 col-xl-6">
 				<h3 class="lh-base mb-3">Epic food lovingly prepared by our amazing chefs!</h3>
 				<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat.</p>
 			</div>
 		</div>
@@ -143,8 +149,8 @@
 			<div class="col col-12 col-sm-12 col-lg-6 col-xl-6">
 				<h3 class="lh-base mb-3">Open around the clock, ready and waiting for your intensive sessions!</h3>
 				<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat.</p>
 			</div>
 			<div class="col">
@@ -173,6 +179,9 @@
 		</div>
 	</div>
 </section>
+<!-- Split Section -->
+
+<!-- Newsletter -->
 <section class="container-fluid bg-dark d-flex flex-column align-items-center p-5 mt-5 mb-5">
 	<h2 class="text-center mb-3 lh-base">Subscribe to our newsletter</h2>
 	<p class="text-center mb-5" style="max-width: 40ch;">Subscribe today for updates on our latest offerings. Events, new games and chances to win some kickass loot!</p>
@@ -183,6 +192,9 @@
 		</div>
 	</form>
 </section>
+<!-- Newsletter -->
+
+<!-- Latest News Section -->
 <section class="container-fluid p-4 mb-5">
 	<h2 class="text-center mb-5">Latest News</h2>
 	<div class="container-fluid d-flex flex-wrap justify-content-center p-0">
@@ -228,12 +240,19 @@
 		</div>
 	</div>
 </section>
-<section class="container-fluid bg-dark d-flex flex-column align-items-center p-5 mt-5 mb-5">
-	<h2 class="text-center mb-3 lh-base">Delectable savings off your first visit!</h2>
-	<p class="text-center mb-4" style="max-width: 40ch;">20% off your first visit or 40% with a group of 6 or more!</p>
-	<button class="btn btn-primary btn-lg">Book Now</button>
-</section>
+<!-- Latest News Section -->
 
+<!-- Special Offer Section -->
+<section class="container-fluid d-flex flex-column align-items-center p-5 mt-5 mb-5 bg-dark">
+	<h2 class="text-center mb-3 lh-base">Delectable savings on your first visit!</h2>
+	<p class="text-center mb-4" style="max-width: 40ch;">20% off your first visit or 40% with a group of 6 or more!</p>
+	<button class="btn btn-outline-primary btn-lg">Book Now</button>
+</section>
+<!-- Special Offer Section -->
+
+<!-- Footer -->
+	
+<!-- Footer -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
