--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	<p class="text-center mb-5" style="max-width: 40ch;">Subscribe today for updates on our latest offerings. Events, new games and chances to win some kickass loot!</p>
 	<form>
 		<div class="input-group mb-3 form-outline form-white">
-			<input type="email" class="form-control" placeholder="Recipient's email" aria-label="Recipient's email" aria-describedby="button-addon2">
+			<input type="email" class="form-control" placeholder="Email address" aria-label="Email address" aria-describedby="button-addon2">
 			<button class="btn btn-outline-primary" type="button" id="button-addon2">Subscribe</button>
 		</div>
 	</form>
