--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded p-3">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Vexam</a>
+				<a class="navbar-brand" href="#">
+					<img src="images/logo.png">
+				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -251,7 +253,36 @@
 <!-- Special Offer Section -->
 
 <!-- Footer -->
-	
+<section>
+	<div class="container-fluid bg-dark p-5">
+		<div class="row">
+			<div class="col">
+				<a href="index.html">
+					<img src="images/logo.png">
+				</a>
+			</div>
+			<div class="col">
+				<ul>
+					<li>
+						<a href="#">About Us</a>
+					</li>
+					<li>
+						<a href="#">Games</a>
+					</li>
+					<li>
+						<a href="#">Events</a>
+					</li>
+					<li>
+						<a href="#">Shop</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col">
+				c
+			</div>
+		</div>
+	</div>
+</section>
 <!-- Footer -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
