Added links to footer

--- a/index.html
+++ b/index.html
@@ -45,10 +45,16 @@
 							<a class="nav-link" href="#">Events</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" href="#">Competitions</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#">Shop</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Careers</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Franchise</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Contact Us</a>
@@ -253,7 +259,7 @@
 <!-- Special Offer Section -->
 
 <!-- Footer -->
-<section>
+<footer class="mt-5 fs-5">
 	<div class="container-fluid bg-dark p-5">
 		<div class="row">
 			<div class="col">
@@ -273,16 +279,29 @@
 						<a href="#">Events</a>
 					</li>
 					<li>
-						<a href="#">Shop</a>
+						<a href="#">Competitions</a>
 					</li>
 				</ul>
 			</div>
 			<div class="col">
-				c
+				<ul>
+					<li>
+						<a href="#">Shop</a>
+					</li>
+					<li>
+						<a href="#">Careers</a>
+					</li>
+					<li>
+						<a href="#">Franchise</a>
+					</li>
+					<li>
+						<a href="#">Contact Us</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
-</section>
+</footer>
 <!-- Footer -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
