--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 	<!-- End -->
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700;800;900&display=swap" rel="stylesheet">
 	<!-- End -->
 </head>
 <body>
 	<!-- Hero Section -->
 	<section id="hero">
 		<!-- Navbar -->
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded p-3">
+		<nav class="navbar navbar-expand-xl navbar-dark bg-dark rounded p-3">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">
 					<img src="images/logo.png">
@@ -69,7 +69,7 @@
 
 
 		<header class="d-flex flex-column justify-content-center align-items-center h-100 text-center mb-5">
-			<h1 class="display-3 text-white text-capitalize lh-base" style="max-width: 25ch">intense games. epic food. sweet victory.</h1>
+			<h1 class="display-4 text-white text-uppercase lh-base" style="max-width: 25ch">intense games. epic food. sweet victory.</h1>
 			<p class="text-white mt-3 mb-4" style="max-width: 40ch;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			<div>
